--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "ganache-cli": "^6.12.2",
     "mocha": "^9.2.2",
     "solc": "^0.4.17",
